@@ -126,6 +126,8 @@ Bar code type "symbology" constants:
 
 =item I25
 
+=item CODABAR
+
 =item CODE39
 
 =item CODE93
